k8s/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: salon-gateway
  namespace: salon
  annotations:
    alb.networking.azure.io/alb-name: salon-alb
    alb.networking.azure.io/alb-namespace: alb
spec:
  gatewayClassName: azure-alb-external

  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same

    - name: https
      protocol: HTTPS
      port: 443
      hostname: "www.auracut.store"
      tls:
        mode: Terminate
        certificateRefs:
          - name: salon-listener-tls
      allowedRoutes:
        namespaces:
          from: Same
